--- a/module_compiler/build.gradle
+++ b/module_compiler/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'java-library'
-apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'maven-publish'
 
 group='com.github.MCKRGF'
 dependencies {
