--- a/module_view/build.gradle
+++ b/module_view/build.gradle
@@ -34,8 +34,8 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation "androidx.core:core-ktx:$rootProject.ext.ktxCoreVersion"
+    implementation "androidx.appcompat:appcompat:$rootProject.ext.appcompatVersion"
     implementation 'com.google.android.material:material:1.3.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
